src/test/fail/array_element_to_primitive_fail.egern
var a = [[0, 1], [1, 2]]
a[0] = 3
